# Lite-GPT

./: .gitignore  README.md  blog.md  init_wandb.py  pyproject.toml  setup.ipynb  setup_16M.sh  setup_25M.sh  setup_colab.sh  upload_hf.sh
configs/data/: LiteGPT-25M.yaml  shakespeare.yaml
configs/model/: LiteGPT-25M.yaml  LiteGPT-50M.yaml  LiteGPT-Small.yaml
configs/train/: LiteGPT-25M.yaml  LiteGPT-50M.yaml  LiteGPT-Small.yaml
docs/LiteGPT-16M/: generation.md  training.md
docs/LiteGPT-25M/: architecture.md  datasets.md  generation.md  training.md
docs/LiteGPT-Small/: architecture.md  datasets.md  experiments.md  training.md
evals/: benchmark.py  generate.py  perplexity.py
src/data/: clean.py  dataloader.py  datasets.py  tokenizer.py
src/litegpt_16M/data/: dataloader.py  tokenizer.py
src/litegpt_16M/model/: model.py
src/litegpt_16M/training/: scheduler.py  train.py
src/litegpt_16M/utils/: logger.py  metrics.py
src/litegpt_25M/data/: dataloader.py  datasets.py  tokenizer.json  tokenizer.py
src/litegpt_25M/model/: model.py
src/litegpt_25M/training/: checkpointing.py  train.py
src/litegpt_25M/utils/: metrics.py
src/model/: model.py
src/training/: checkpointing.py  scheduler.py  train.py
src/utils/: metrics.py
tests/: test_dataloader.py  test_model.py  test_tokenizer.py
wandb/: latest-run
wandb/run-20260619_125639-te90ziow/: run-te90ziow.wandb
wandb/run-20260619_125639-te90ziow/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260619_130946-2paojac3/: run-2paojac3.wandb
(+4 files in other folders)
