[project]
name = "lite-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=5.0.0",
    "numpy>=2.4.6",
    "omegaconf>=2.3.1",
    "requests>=2.34.2",
    "safetensors>=0.8.0",
    "tiktoken>=0.13.0",
    "torch>=2.12.1",
    "wandb>=0.27.2",
]
